--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -1,8 +1,7 @@
 <div data-controller="empty" class="box is-padding-less mx-3">
   <div class="box-header">
     <div>
-      <i class="fa-solid fa-fw fa-store has-text-primary"></i>
-      <span><%= t('factory.admin.title') %></span>
+      <span class="size-7 has-border-left-primary"><%= t('factory.admin.title') %></span>
     </div>
     <%= link_to({ controller: '/factory/productions' }, state: 'enter') do %>
       <i class="fa-solid fa-up-right-and-down-left-from-center"></i>
