--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -1,5 +1,5 @@
 <div class="media box">
-  <div class="media-left as-logo">
+  <div class="media-left">
     <figure class="image is-64x64 is-1by1">
       <%= image_tag model.logo if model.logo.attached? %>
     </figure>
