--- a/app/views/factory/admin/product_taxons/_all/_factory_tr.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/_all/_factory_tr.html+phone.erb
@@ -2,7 +2,7 @@
   <div class="media-content">
     <%= yield %>
   </div>
-  <div class="media-right as-x">
+  <div class="media-right">
     <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_scroll: true }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-plus has-text-link"></i>
       <span class="pl-1"><%= t('.new.title') %></span>
