--- a/app/views/factory/admin/home/_index_item.html.erb
+++ b/app/views/factory/admin/home/_index_item.html.erb
@@ -1,28 +1,36 @@
-<%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'weui-cell weui-cell_access') do %>
-  <div class="weui-cell__bd">
+<%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'media') do %>
+  <div class="media-content">
     <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.product_taxons.index.title') %></span>
   </div>
-  <div class="weui-cell__ft"></div>
+  <div class="media-right">
+    <i class="fa-solid fa-chevron-right"></i>
+  </div>
 <% end %>
-<%= link_to({ controller: 'factory/admin/parts' }, class: 'weui-cell weui-cell_access') do %>
-  <div class="weui-cell__bd">
+<%= link_to({ controller: 'factory/admin/parts' }, class: 'media') do %>
+  <div class="media-content">
     <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.parts.index.title') %></span>
   </div>
-  <div class="weui-cell__ft"></div>
+  <div class="media-right">
+    <i class="fa-solid fa-chevron-right"></i>
+  </div>
 <% end %>
-<%= link_to({ controller: 'factory/admin/scenes' }, class: 'weui-cell weui-cell_access') do %>
-  <div class="weui-cell__bd">
+<%= link_to({ controller: 'factory/admin/scenes' }, class: 'media') do %>
+  <div class="media-content">
     <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.scenes.index.title') %></span>
   </div>
-  <div class="weui-cell__ft"></div>
+  <div class="media-right">
+    <i class="fa-solid fa-chevron-right"></i>
+  </div>
 <% end %>
-<%= link_to({ controller: 'factory/admin/factory_taxons' }, class: 'weui-cell weui-cell_access') do %>
-  <div class="weui-cell__bd">
+<%= link_to({ controller: 'factory/admin/factory_taxons' }, class: 'media') do %>
+  <div class="media-content">
     <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.factory_taxons.index.title') %></span>
   </div>
-  <div class="weui-cell__ft"></div>
+  <div class="media-right">
+    <i class="fa-solid fa-chevron-right"></i>
+  </div>
 <% end %>
