--- a/app/views/factory/admin/productions/_actions.html.erb
+++ b/app/views/factory/admin/productions/_actions.html.erb
@@ -1,8 +1,8 @@
-<%= button_to({ action: 'edit', id: model.id }, class: 'cell') do %>
+<%= button_to({ action: 'edit', id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-solid fa-pencil"></i>
   <span><%= t('.edit.title') %></span>
 <% end %>
-<%= link_to({ controller: 'production_plans', production_id: model.id }, class: 'cell') do %>
+<%= link_to({ controller: 'production_plans', production_id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-solid fa-list-timeline"></i>
   <span><%= t('factory.admin.production_plans.index.title') %></span>
 <% end %>
