--- a/app/views/factory/mem/produce_plans/_actions.html.erb
+++ b/app/views/factory/mem/produce_plans/_actions.html.erb
@@ -1,4 +1,4 @@
-<%= link_to({ controller: 'productions', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'cell') do %>
+<%= link_to({ controller: 'productions', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'cell has-column-centered') do %>
   <i class="fa-solid fa-hand"></i>
   <span>自己点餐</span>
 <% end %>
