--- a/app/views/factory/admin/production_plans/_actions.html.erb
+++ b/app/views/factory/admin/production_plans/_actions.html.erb
@@ -1,4 +1,4 @@
-<%= button_to({ action: 'edit', id: model.id }, class: 'cell') do %>
+<%= button_to({ action: 'edit', id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-solid fa-pencil"></i>
   <span><%= t('.edit.title') %></span>
 <% end %>
@@ -6,7 +6,7 @@
   <i class="fa-solid fa-trash"></i>
   <span><%= t('.destroy.title') %></span>
 <% end %>
-<%= link_to({ controller: 'production_items', production_plan_id: model.id }, class: 'cell') do %>
+<%= link_to({ controller: 'production_items', production_plan_id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-regular fa-list-timeline"></i>
   <span><%= t('factory.admin.production_items.index.title') %></span>
   <span class="has-text-grey">（<%= model.production_items_count %>）</span>
