--- a/app/views/factory/admin/products/_actions.html.erb
+++ b/app/views/factory/admin/products/_actions.html.erb
@@ -1,8 +1,8 @@
-<%= button_to({ action: 'edit', id: model.id }, class: 'cell') do %>
+<%= button_to({ action: 'edit', id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-solid fa-pencil"></i>
   <span><%= t('.edit.title') %></span>
 <% end %>
-<%= link_to({ controller: 'productions', product_id: model.id }, class: 'cell') do %>
+<%= link_to({ controller: 'productions', product_id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-regular fa-clone"></i>
   <span><%= model.productions_count %></span>
   <span><%= t('factory.admin.productions.index.title') %></span>
