--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -3,7 +3,7 @@
     <div>
       <span class="size-7 has-border-left-primary"><%= t('factory.admin.title') %></span>
     </div>
-    <%= link_to({ controller: '/factory/productions' }, state: 'enter') do %>
+    <%= link_to({ controller: '/factory/productions' }, state: 'enter', class: 'size-7') do %>
       <i class="fa-solid fa-up-right-and-down-left-from-center"></i>
       <span>预览商店</span>
     <% end %>
