--- a/app/views/factory/admin/production_items/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_base/_index_tr.html.erb
@@ -5,7 +5,7 @@
       <button class="button is-small is-rounded is-light" data-controller="print" data-print-url-value="<%= url_for(controller: 'production_items', action: 'pdf', id: model.id) %>" data-action="print#doPrint">
         <i class="fa-solid fa-print has-text-success"></i>
       </button>
-      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'print', id: model.id }, method: :patch, aria: { label: t('.print.title') }, data: { turbo_confirm: t('.print.confirm') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-print has-text-success"></i>
       <% end %>
       <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
@@ -14,7 +14,7 @@
       <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil has-text-link"></i>
       <% end %>
-      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy.title') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm') } }) do %>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy.title') }, form: { data: { turbo_confirm: t('.destroy.confirm') } }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-trash has-text-danger"></i>
       <% end %>
     </div>
