--- a/app/views/factory/admin/production_items/_delivery/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_delivery/_index_tr.html.erb
@@ -2,10 +2,10 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
-      <%= button_to({ action: 'update_delivery', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.update_delivery.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'update_delivery', id: model.id }, method: :patch, data: { turbo_confirm: t('.update_delivery.confirm') }, aria: { label: t('.update_delivery.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-list has-text-danger"></i>
       <% end %>
-      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.print.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-print has-text-info"></i>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
