--- a/app/views/factory/admin/trade_items/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/trade_items/_base/_index_tr.html.erb
@@ -2,11 +2,12 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
+      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.print.confirm') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-print has-text-success"></i>
+        <span class="pl-1"><%= t('.print.title') %></span>
+      <% end %>
       <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
-      <% end %>
-      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.trade_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-print has-text-success"></i>
       <% end %>
       <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil has-text-link"></i>
