--- a/app/views/factory/my/productions/_index/_custom.html.erb
+++ b/app/views/factory/my/productions/_index/_custom.html.erb
@@ -24,6 +24,6 @@
     </ul>
   </div>
   <div class="media-right" data-swipe-target="open">
-    <%= link_to '删除', my_custom_path(custom), method: :delete, data: { turbo_confirm: t('.confirm') }, class: 'weui-btn weui-btn_mini weui-btn_warn' %>
+    <%= link_to '删除', my_custom_path(custom), method: :delete, data: { turbo_confirm: t('.destroy.confirm') }, class: 'weui-btn weui-btn_mini weui-btn_warn' %>
   </div>
 </div>
