only show brands if collectoo

--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.collection_select :brand_id, @brands, :id, :name, include_blank: true %>
+<%= f.collection_select :brand_id, @brands, :id, :name, include_blank: true if @brands.present? %>
 <%= f.text_field :name, required: true %>
 <%= f.file_field :logo %>
 <%= render 'com/attachments/list_field', target: f.object.covers, f: f %>
