--- a/app/views/factory/admin/productions/_form.html.erb
+++ b/app/views/factory/admin/productions/_form.html.erb
@@ -7,8 +7,6 @@
     </div>
   </div>
 </div>
-
-<%= f.number_field :cost_price %>
-<%= f.number_field :profit_price %>
+<%= f.number_field :price %>
 <%= f.text_field :link %>
 <%= f.number_field :stock %>
