--- a/app/views/factory/productions/_base/_space_dispatch.html.erb
+++ b/app/views/factory/productions/_base/_space_dispatch.html.erb
@@ -1,10 +1,10 @@
 <div class="box radiusless flex justify-content-space-between mb-0">
   <div>
     <i class="fa-solid fa-location-dot has-text-grey"></i>
-    <span class="pl-1"><%= @desk.content %></span>
+    <span class="pl-1"><%= Trade::Cart.enum_i18n(:dispatch, params[:dispatch]) %></span>
   </div>
   <div>
-    <%= button_to({ controller: '/space/desks', action: 'change', station_id: @desk.room.station_id }) do %>
+    <%= link_to({ controller: '/space/desks', station_id: @desk.room.station_id }) do %>
       <i class="fa-solid fa-chevron-right"></i>
     <% end %>
   </div>
