--- a/app/views/factory/productions/change_dispatch.turbo_stream.erb
+++ b/app/views/factory/productions/change_dispatch.turbo_stream.erb
@@ -1,7 +1,7 @@
 <%= turbo_stream.append 'body' do %>
   <%= render layout: 'modal' do %>
     <div class="fixed-grid has-3-cols">
-      <div class="grid gap-2">
+      <div class="grid gap-2 as-actions">
       <% Trade::Item.options_i18n(:dispatch).each do |text, value| %>
         <%= link_to({ controller: '/factory/productions', dispatch: value }, class: 'cell has-column-centered') do %>
           <% if value.to_s == params[:dispatch] %>
