--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -1,3 +1,4 @@
+<% item = @cart&.find_item(good_id: model.id, dispatch: params[:dispatch], produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 <div id="production_<%= model.id %>" data-controller="common" class="weui-media-box weui-media-box_appmsg is-box">
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', data: { controller: 'empty' }, class: 'weui-media-box__hd as-logo') do %>
     <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
@@ -31,7 +32,7 @@
           </div>
         </div>
         <div class="flex">
-        <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+        <% if item %>
           <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
         <% else %>
           <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
@@ -45,7 +46,7 @@
             <div class="tag is-success"><%= r[:name] %></div>
           </div>
           <div class="flex">
-          <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+          <% if item %>
             <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
           <% else %>
             <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
@@ -59,7 +60,7 @@
           <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
         </div>
         <div class="flex">
-        <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+        <% if item %>
           <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
         <% else %>
           <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
