--- a/app/views/factory/productions/_base/_space_dispatch.html.erb
+++ b/app/views/factory/productions/_base/_space_dispatch.html.erb
@@ -1,4 +1,4 @@
-<div class="box radiusless flex justify-content-space-between mb-0">
+<div class="box is-normal radiusless flex justify-content-space-between mb-0">
   <div>
     <i class="fa-solid fa-location-dot has-text-grey"></i>
     <span class="pl-1"><%= Trade::Cart.enum_i18n(:dispatch, params[:dispatch]) %></span>
