--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -1,7 +1,12 @@
 <div data-controller="menu empty" class="<%= active_helper(modules: ['factory/admin', 'factory/in'], active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>">
-  <div class="menu-label">
-    <i class="fa-solid fa-fw fa-store"></i>
-    <span><%= t('factory.admin.title') %></span>
+  <div class="menu-label flex justify-content-space-between">
+    <div>
+      <i class="fa-solid fa-fw fa-store"></i>
+      <span><%= t('factory.admin.title') %></span>
+    </div>
+    <%= link_to({ controller: 'factory/admin/organs', action: 'show' }, aria: { label: '设置' }) do %>
+      <i class="fa-solid fa-cog"></i>
+    <% end %>
   </div>
   <div data-empty-target="content" class="menu-list">
     <%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'factory/admin/product_taxons' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['taxon/products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
