--- a/app/views/factory/admin/organs/_form.html.erb
+++ b/app/views/factory/admin/organs/_form.html.erb
@@ -1,3 +1,3 @@
-<%= f.fields :factory_settings, model: RailsCom::Setting.new(f.object.factory_settings), label: nil, placeholder: true, wrap: { input: 'field > control', select: 'field is-narrow > control > select is-fullwidth' } do |pf| %>
-  <%= pf.text_field :column, autocomplete: 'off' %>
+<%= f.fields :factory_settings, model: OpenStruct.new(f.object.factory_settings), label: nil, placeholder: true, wrap: { input: 'field > control', select: 'field is-narrow > control > select is-fullwidth' } do |pf| %>
+  <%= pf.text_field :dispatch, autocomplete: 'off' %>
 <% end %>
