--- a/app/views/factory/admin/organs/_form.html.erb
+++ b/app/views/factory/admin/organs/_form.html.erb
@@ -1,3 +1,3 @@
 <%= f.fields :factory_settings, model: OpenStruct.new(f.object.factory_settings) do |pf| %>
-  <%= pf.select :dispatch, options_for_select(Trade::Item.options_i18n(:dispatch)), label:'dd' %>
+  <%= pf.select :dispatch, options_for_select(Trade::Item.options_i18n(:dispatch), pf.object.dispatch), label:'dd' %>
 <% end %>
