--- a/app/views/factory/admin/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tbody.html.erb
@@ -17,6 +17,11 @@
 <% end %>
 </td>
 <td>
+<% model.productions.each do |production| %>
+  <p><%= production.price.to_money.format.html_safe %></p>
+<% end %>
+</td>
+<td>
   <p><%= model.product_taxon.name %></p>
 </td>
 <td>
