--- a/app/views/factory/admin/products/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_base/_index_thead.html.erb
@@ -3,6 +3,7 @@
 </th>
 <th><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:stock) %></th>
+<th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th><%= Factory::Product.human_attribute_name(:product_taxon_id) %></th>
 <th></th>
 <th></th>
