show price in index page

--- a/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
@@ -22,6 +22,11 @@
 <% end %>
 </td>
 <td>
+<% model.productions.each do |production| %>
+  <p><%= production.price.to_money.format.html_safe %></p>
+<% end %>
+</td>
+<td>
   <% model.product_part_taxons.each do |product_part_taxon| %>
     <p>
       <span><%= product_part_taxon.name %></span>
