--- a/app/views/factory/admin/taxon/products/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_thead.html.erb
@@ -3,5 +3,6 @@
 </th>
 <th><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:stock) %></th>
+<th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th></th>
 <th></th>
