--- a/app/views/factory/productions/_dialog.html.erb
+++ b/app/views/factory/productions/_dialog.html.erb
@@ -17,7 +17,7 @@
     <span class="has-text-danger"><%= @production.price.to_money.format.html_safe %></span>
   </div>
   <% @production.same_parts.includes(:product_taxon).group_by(&:product_taxon).each do |part_taxon, parts| %>
-    <%= render partial: 'factory/productions/_base/product_part_taxon', locals: { part_taxon: part_taxon, parts: parts } %>
+    <%= render partial: 'product_part_taxon', locals: { part_taxon: part_taxon, parts: parts } %>
   <% end %>
 </div>
 <div class="weui-half-screen-dialog__ft">
