--- a/app/views/factory/productions/show.turbo_stream.erb
+++ b/app/views/factory/productions/show.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.append 'body', partial: 'show', layout: 'modal', locals: { model: @production } %>
+<%= turbo_stream.append 'body', partial: 'show', layout: 'modal_change', locals: { model: @production } %>
