--- a/app/views/factory/productions/_show/_card_brothers.html.erb
+++ b/app/views/factory/productions/_show/_card_brothers.html.erb
@@ -2,6 +2,7 @@
 <% @production.brothers.enabled.each do |brother| %>
   <%= button_to({ id: brother.id }, class: brother.id.to_s == params[:id] ? 'button is-primary' : 'button') do %>
     <span><%= brother.name %></span>
-  <% end %>
+    <span class="pl-2"><%= brother.price.to_money.format.html_safe %></span>
+<% end %>
 <% end %>
 </div>
