--- a/app/views/factory/productions/_show/_modal_foot.html.erb
+++ b/app/views/factory/productions/_show/_modal_foot.html.erb
@@ -1,5 +1,7 @@
+<footer class="modal-card-foot justify-content-center">
 <% if item = @cart&.find_item(good_id: @production.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
   <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items', item: item, cart: @cart } %>
 <% else %>
   <%= render partial: 'add_cart_button', locals: { model: @production, item_con: 'trade/my/items' } %>
 <% end %>
+</footer>
