--- a/app/views/application/_production_cart.html+phone.erb
+++ b/app/views/application/_production_cart.html+phone.erb
@@ -1,7 +1,7 @@
 <% if item = @cart&.find_item(good_id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
   <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
 <% elsif model.product.productions_count > 1 %>
-  <%= button_to({ action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded is-primary') do %>
+  <%= button_to({ action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, form: { id: "cart_#{model.id}#{@cart&.identity}" }, class: 'button is-small is-rounded is-primary') do %>
     <span>选规格</span>
   <% end %>
 <% else %>
