--- a/app/views/application/_production_cart.html+phone.erb
+++ b/app/views/application/_production_cart.html+phone.erb
@@ -2,7 +2,7 @@
   <% items = @cart&.find_items(model.product.production_ids, dispatch: params[:dispatch].presence || current_organ.dispatch, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
   <% if items.present? %>
     <%= button_to({ action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, form: { id: "cart_#{model.id}#{@cart&.identity}" }, class: 'button is-small is-rounded is-primary') do %>
-      <span><%= items.size %>规格加入购物车</span>
+      <span><%= items.size %>个规格已加入购物车</span>
     <% end %>
   <% else %>
     <%= button_to({ action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, form: { id: "cart_#{model.id}#{@cart&.identity}" }, class: 'button is-small is-rounded is-primary') do %>
