support taxon nil

--- a/app/views/factory/admin/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tbody.html.erb
@@ -22,7 +22,7 @@
 <% end %>
 </td>
 <td>
-  <p><%= model.product_taxon.name %></p>
+  <p><%= model.product_taxon&.name %></p>
 </td>
 <td>
   <% model.product_part_taxons.each do |product_part_taxon| %>
