--- a/app/views/factory/productions/_show/_modal_foot.html.erb
+++ b/app/views/factory/productions/_show/_modal_foot.html.erb
@@ -1,7 +1,7 @@
 <footer class="modal-card-foot justify-content-center">
 <% item = @cart&.find_item(good_id: @production.id, dispatch: params[:dispatch] || current_organ.dispatch, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 <% if item %>
-  <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items', item: item, cart: @cart } %>
+  <%= render partial: 'new_cart', locals: { model: @production, item_con: 'trade/my/items', item: item, cart: @cart } %>
 <% else %>
   <%= render partial: 'new_cart_button', locals: { model: @production, item_con: 'trade/my/items' } %>
 <% end %>
