--- a/app/views/factory/admin/productions/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_thead.html.erb
@@ -12,5 +12,8 @@
   <p><%= Factory::Production.human_attribute_name(:default) %></p>
   <p><%= Factory::Production.human_attribute_name(:presell) %></p>
 </th>
-<th><%= Factory::Production.human_attribute_name(:stock) %></th>
+<th>
+  <p><%= Factory::Production.human_attribute_name(:stock) %></p>
+  <p><%= Factory::Production.human_attribute_name(:step) %></p>
+</th>
 <th><%= Factory::Production.human_attribute_name(:enabled) %></th>
