--- a/app/views/factory/admin/produce_plans/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/produce_plans/_base/_index_tr.html.erb
@@ -2,9 +2,6 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
-      <%= link_to({ action: 'products', id: model.id }, aria: { label: t('factory.admin.produce_plans.products.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-cart-flatbed color-success"></i>
-      <% end %>
       <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info color-info"></i>
       <% end %>
@@ -13,6 +10,12 @@
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy.title') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
         <i class="fa-solid fa-trash color-danger"></i>
+      <% end %>
+    </div>
+    <div data-show-target="item" class="visibility-hidden">
+      <%= link_to({ action: 'products', id: model.id }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-cart-flatbed color-success"></i>
+        <span class="ml-1"><%= t('.produce_plans.products.title') %></span>
       <% end %>
     </div>
   </td>
