--- a/app/views/factory/admin/productions/show.html.erb
+++ b/app/views/factory/admin/productions/show.html.erb
@@ -1,15 +1,5 @@
 <%= render 'production_bar' %>
 
-<table class="table is-fullwidth is-hoverable as-show">
-  <thead>
-    <tr>
-      <th></th>
-      <th>
-        <%= link_to t('.edit.title'), { action: 'edit' }, class: 'button is-small is-link' %>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render 'show_table' %>
-  </tbody>
-</table>
+<dl class="as-show is-box">
+  <%= render 'show_table' %>
+</dl>
