--- a/app/views/factory/admin/product_part_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_base/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
-  <span><%= model.name %></span>
-  <span class="tag"><%= model.part_taxon.name %></span>
+  <p><%= model.name %></p>
+  <p><span class="tag"><%= model.part_taxon.name %></span></p>
 </td>
 <td>
   <p><%= model.min_select %></p>
