--- a/app/views/factory/admin/taxon/products/_new_modal_form.html.erb
+++ b/app/views/factory/admin/taxon/products/_new_modal_form.html.erb
@@ -1,14 +1,13 @@
-<%= form_with model: @product, scope: :product, url: { action: 'create' }, class: 'modal-card' do |f| %>
+<%= form_with theme: 'modal', model: @product, scope: :product, url: { action: 'create' } do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
     <button type="button" data-action="modal#close" class="delete"></button>
   </header>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
-    <%= f.collection_select :product_taxon_id, @product_taxons, :id, :name %>
     <%= render partial: 'form', locals: { f: f } %>
   </section>
-  <footer class="modal-card-foot is-block">
+  <footer class="modal-card-foot justify-content-center">
     <%= f.submit %>
   </footer>
 <% end %>
