the product parts

--- a/app/views/factory/productions/_show.html.erb
+++ b/app/views/factory/productions/_show.html.erb
@@ -1,3 +1,5 @@
-<% %>
-
-<%= render 'card_brothers' %>
+<% if @production.parts.present? %>
+  <%= render 'dialog_form' %>
+<% else %>
+  <%= render 'card_brothers' %>
+<% end %>
