--- a/app/views/factory/admin/productions/_part/_form.html.erb
+++ b/app/views/factory/admin/productions/_part/_form.html.erb
@@ -8,11 +8,11 @@
     <% @product.product_part_taxons.each do |product_part_taxon| %>
       <p class="has-border-bottom mb-2"><%= product_part_taxon.name %></p>
       <% product_part_taxon.parts.each do |product| %>
-        <%= f.collection_check_boxes :part_ids, product.productions, :id, :name, { label: product.name, wrap: { select: 'field-body control' } }, { multiple: true } %>
+        <%= f.collection_check_boxes :part_ids, product.productions, :id, :name, { label: product.name, wrap: { label: 'field-label', select: 'field-body control' } }, { multiple: true } %>
       <% end %>
     <% end %>
   </section>
-  <footer class="modal-card-foot">
+  <footer class="modal-card-foot justify-content-center">
     <%= f.submit %>
   </footer>
 <% end %>
