--- a/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
@@ -27,16 +27,16 @@
 <% end %>
 </td>
 <td>
-  <% model.product_part_taxons.each do |product_part_taxon| %>
+  <% model.product_parts.each do |product_part| %>
     <p>
-      <span><%= product_part_taxon.name %></span>
-      <span class="color-grey size-7"><%= product_part_taxon.select_str %></span>
+      <span><%= product_part.name %></span>
+      <span class="color-grey size-7"><%= product_part.select_str %></span>
     </p>
   <% end %>
   <p data-show-target="item" class="visibility-hidden">
-    <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ controller: 'product_parts', product_id: model.id }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-tree"></i>
-      <span class="pl-1"><%= t('.product_part_taxons.index.title') %></span>
+      <span class="pl-1"><%= t('.product_parts.index.title') %></span>
     <% end %>
   </p>
 </td>
