--- a/app/views/factory/admin/product_parts/_show_table.html.erb
+++ b/app/views/factory/admin/product_parts/_show_table.html.erb
@@ -1,12 +1,12 @@
 <div>
-  <dt><%= ProductPart.human_attribute_name(:part_taxon_id) %></dt>
+  <dt><%= Factory::ProductPart.human_attribute_name(:part_taxon_id) %></dt>
   <dd><%= @product_part.part_taxon_id %></dd>
 </div>
 <div>
-  <dt><%= ProductPart.human_attribute_name(:part_id) %></dt>
+  <dt><%= Factory::ProductPart.human_attribute_name(:part_id) %></dt>
   <dd><%= @product_part.part_id %></dd>
 </div>
 <div>
-  <dt><%= ProductPart.human_attribute_name(:default) %></dt>
+  <dt><%= Factory::ProductPart.human_attribute_name(:default) %></dt>
   <dd><%= @product_part.default %></dd>
 </div>
