use directly parts

--- a/app/views/factory/admin/product_parts/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/product_parts/_index/_breadcrumb.html.erb
@@ -1,2 +1,1 @@
-<li><%= link_to t('.products.index.title'), { controller: 'products' } %></li>
-<li class="is-active"><%= t('.title') %></li>
+<%= render 'product_breadcrumb' %>
