--- a/app/views/factory/admin/product_part_taxons/_new_modal_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_new_modal_form.html.erb
@@ -5,11 +5,11 @@
   </header>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
-    <%= f.collection_select :part_taxon_id, @part_taxons, :id, :name %>
+    <%= f.text_field :name %>
     <%= f.number_field :min_select, step: 1, data: { action: 'equal#update' } %>
     <%= f.number_field :max_select, step: 1, data: { equal_target: 'goal' } %>
   </section>
-  <footer class="modal-card-foot">
+  <footer class="modal-card-foot justify-content-center">
     <%= f.submit %>
   </footer>
 <% end %>
