--- a/app/views/factory/admin/product_part_taxons/_edit_modal_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_edit_modal_form.html.erb
@@ -6,6 +6,7 @@
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
     <%= f.text_field :name %>
+    <%= f.collection_select :part_taxon_id, @part_taxons, :id, :name %>
     <%= f.number_field :min_select, step: 1, data: { action: 'equal#update' } %>
     <%= f.number_field :max_select, step: 1, data: { equal_target: 'goal' } %>
   </section>
