--- a/app/views/factory/admin/product_parts/_form.html.erb
+++ b/app/views/factory/admin/product_parts/_form.html.erb
@@ -1,1 +1,2 @@
-<%= f.collection_radio_buttons :part_id, @product_part_taxon.part_taxon.productions, :id, :name, {}, { data: { action: 'input#form' } } %>
+<%= f.collection_select :part_id, @product_part_taxon.part_taxon.productions, :id, :name, {}, { data: { action: 'input#form' } } %>
+<%= f.check_box :default %>
